Menu Refactoring